# user_crud_lightstar

./: .flake8  .gitignore  .style.yapf  Dockerfile  INSTRUCTIONS.md  README.md  alembic.ini  docker-compose.yml  env.py.tmp  pyproject.toml  setup.cfg
app/: asgi.py
app/domain/models/: __init__.py  mappers.py  tables.py  user.py
app/domain/repositories/: __init__.py  user_repository.py
app/domain/repositories/abstract/: __init__.py  user_repository.py
app/domain/services/: user.py
app/infrastructure/: __init__.py  config.py  exceptions.py
app/infrastructure/database/: dependencies.py  session.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py  schemas.py  user_router.py
migrations/: env.py
migrations/versions/: initial_migration.py
